--- a/style/style.css
+++ b/style/style.css
@@ -101,8 +101,7 @@ header{
     display: flex;
     justify-content: center;
     gap: 1%;
-    
-    
+
 }
 
 
@@ -114,4 +113,8 @@ header{
     color: red;
     background-color: rgb(203, 252, 113);
     border-radius: 3px;
+}
+
+.abecedari > button:hover{
+    filter: brightness(1.2);
 }
