--- a/style/style.css
+++ b/style/style.css
@@ -1,6 +1,4 @@
-*{
-    margin: 0;
-}
+
 
 
 /*****************************************************HEADER ******************/
@@ -8,7 +6,6 @@
 header{
     display: flex;
     justify-content: flex-end;
-    border: 1px solid black;
     padding: 2%;
 }
 
@@ -19,6 +16,7 @@ header{
 #empezar{
     background-color: rgb(203, 252, 113);
     padding: .5%;
+    border-radius: 5px;
 }
 
 
@@ -31,6 +29,7 @@ header{
     justify-content: center;
     background-color: rgb(200, 209, 243);
     padding: 2%;
+    border-radius: 15px;
 }
 
 
@@ -41,20 +40,20 @@ header{
     background-color: rgb(251, 214, 214);
     padding: 2%;
     justify-content:space-between;
-   
+    border-radius: 15px;
  
 }
 
 .imagenes{
     background-color: white;
     border: 1px solid black;  
-    border-radius: 5px; 
+    border-radius: 20px; 
     
 }
 
 #imatge{
     width: 100%;
-    border-radius: 5px; 
+    border-radius: 20px; 
 }
 
 
@@ -64,7 +63,7 @@ header{
     color: white;
     background-color: rgb(188, 83, 113);
     border: 1px solid black;  
-    border-radius: 5px; 
+    border-radius: 30px; 
     padding: 1%;
     
     
@@ -93,6 +92,7 @@ header{
 /************************************************ABECEDARI *************************/
 
 .abecedari{
+    margin-top: 1%;
     display: flex;
     justify-content: center;
     gap: 1%;
