--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,9 @@
-*{
-    margin: 0;
-}
 
-
-/*****************************************************HEADER ******************/
+/***************************************************** HEADER ******************/
 
 header{
     display: flex;
     justify-content: flex-end;
-    border: 1px solid black;
     padding: 2%;
 }
 
@@ -19,10 +14,11 @@ header{
 #empezar{
     background-color: rgb(203, 252, 113);
     padding: .5%;
+    border-radius: 5px;
 }
 
 
-/**********************************************************PARAULA ************/
+/********************************************************** PARAULA ************/
 
 
 
@@ -31,30 +27,31 @@ header{
     justify-content: center;
     background-color: rgb(200, 209, 243);
     padding: 2%;
+    border-radius: 15px;
 }
 
 
-/***********************************************************JOC ***************/
+/*********************************************************** JOC ***************/
 
 .joc{
     display: flex;
     background-color: rgb(251, 214, 214);
     padding: 2%;
     justify-content:space-between;
-   
+    border-radius: 15px;
  
 }
 
 .imagenes{
     background-color: white;
     border: 1px solid black;  
-    border-radius: 5px; 
+    border-radius: 20px; 
     
 }
 
 #imatge{
     width: 100%;
-    border-radius: 5px; 
+    border-radius: 20px; 
 }
 
 
@@ -64,7 +61,7 @@ header{
     color: white;
     background-color: rgb(188, 83, 113);
     border: 1px solid black;  
-    border-radius: 5px; 
+    border-radius: 30px; 
     padding: 1%;
     
     
@@ -91,6 +88,7 @@ header{
     background-color: rgb(188, 83, 113);
     border: 1px solid black;  
     border-radius: 5px; 
+    border-radius: 30px; 
     padding: 1%;
     
     
@@ -112,9 +110,10 @@ header{
 
 
 
-/************************************************ABECEDARI *************************/
+/************************************************ ABECEDARI *************************/
 
 .abecedari{
+    margin-top: 1%;
     display: flex;
     justify-content: center;
     gap: 1%;
